# Wikipedia_CrewAI

./: .env  .gitignore  README.md  README_EN.md  README_PT.md  api.py  requirements.txt
static/: style.css
templates/: chat.html
wikipedia_crewai/: .gitignore  README.md  article.md  pyproject.toml  report.md
wikipedia_crewai/knowledge/: user_preference.txt
wikipedia_crewai/src/wikipedia_crewai/: __init__.py  crew.py  main.py  models.py
wikipedia_crewai/src/wikipedia_crewai/config/: agents.yaml  tasks.yaml
wikipedia_crewai/src/wikipedia_crewai/tools/: __init__.py  wikipedia_search.py
wikipedia_crewai/src/wikipedia_crewai/utils/: save_article.py  topic_validator.py
wikipedia_crewai/tests/: teste_Crew.py  teste_wikipediaTool.py
