[project]
name = "wikipedia_crewai"
version = "0.1.0"
description = "wikipedia-crewAI using crewAI"
authors = [{ name = "Alex Benhard", email = "abenhardferreira@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
wikipedia_crewai = "wikipedia_crewai.main:run"
run_crew = "wikipedia_crewai.main:run"
train = "wikipedia_crewai.main:train"
replay = "wikipedia_crewai.main:replay"
test = "wikipedia_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
